lib/stratiform/res/test/stratiform/corpus/pos/tabulation-row-with-remark.tel
# Name  # Age
Alice   30  # a remark
Bob     25
