lib/stratiform/res/test/stratiform/corpus/neg/e117-hard-space-wrong-position.tel
# Name  # Age
Al  ice 30
